--- a/perfilAdministrador.ejs
+++ b/perfilAdministrador.ejs
@@ -17,11 +17,93 @@
             background-image: url("img/fondo.jpg");
             
         }   
+        
+        .navbar-center
+        {
+            position: absolute;
+            text-align: center;
+            margin: auto;
+            margin-top:10px;
+            margin-left: 25%;
+        }
+        
+        
+        .navbar-center-music
+        {
+            position: absolute;
+            text-align: center;
+            margin: auto;
+            margin-top:10px;
+            margin-left: 37%;
+        }
+        
+        .music-label{
+            font-family: "Arial";
+            font-size: 140%;
+            color:white;
+            text-align: center;
+        }
  
          a:hover {
           cursor:pointer;
          }
     </style>
+    
+    <script type="text/javascript" src="/javascript/prototype.js"></script>    
+    
+    <script>
+        function musicNext(){
+            new Ajax.Request('/musicSiguiente', {
+              method: 'post',
+            
+              });
+        }
+        
+        function musicBack(){
+            new Ajax.Request('/musicAnterior', {
+              method: 'post',
+            
+              });
+        }
+        
+        function musicResume(){
+            new Ajax.Request('/resumeMusic', {
+              method: 'post',
+            
+              });
+        }
+        
+        function musicPause(){
+            new Ajax.Request('/musicPause', {
+              method: 'post',
+            
+              });
+        }
+        
+        var informacion = function infoSong(){
+            new Ajax.Request('/infoSong', {
+              method: 'post',
+              onSuccess: success
+              });
+        }
+        
+        function success(response){
+                var sonando = "Sonando: ";
+                var container = $('informacionCancion');
+                var content = response.responseText;
+                
+                container.update(sonando+content);
+            }
+        <% if (inside == "1" ) { %>
+            setInterval(informacion,1000);
+        <% } %>
+        
+        
+    </script>
+    
+    
+    
+    
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
 <title>Galileo</title>
@@ -34,49 +116,29 @@
         <a class="navbar-brand" style="color:white;">GALILEO</a>
     </div>
     <div class="collapse navbar-collapse" > 
-        <!--
-        <form  name="historico" action="/historico" class="navbar-form navbar-left" method="post" role="tag">                  -->
-            <!--<a onClick="historico.submit();" style="color:white;text-align:center;">Informacion</a>                        -->
-            <!--<div class="form-group">
-                <button id="historico" type="submit" class="btn btn-inverse">Informacion</button>    
-            </div>            
-        </form>        
-        
-        <form name="perfil" action="/perfil" class="navbar-form navbar-left" method="post" role="tag">       -->         
-            <!--<a onClick="perfil.submit();" style="color:white;text-align:center;">Perfil</a>            -->
-            <!--<div class="form-group">
-            </div>
-            <button id="perfil" type="submit" class="btn btn-inverse">Perfil</button>    
-
-        </form>             
-        
-        <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
-            <div class="form-group">
-            </div>
-            <button id="cerrarSesion" type="submit" class="btn btn-inverse">Cerrar sesión</button>    
-  		  </form>-->            
-        
-        <!--<form name="cerrarSesion" action="/cerrarSesion" method="post">
-          <ul class="nav navbar-nav navbar-right">       
-            <ul class="nav navbar-nav">     
-                <li><a onClick="cerrarSesion.submit();" style="color:white">Cerrar sesión</a></li>
-            </ul>            
-          </ul>
-        </form>                -->
-        <form  name="historico" action="/historico" class="navbar-form navbar-left" method="post" role="tag">                                
-            <!--<a onClick="historico.submit();" style="color:white;text-align:center;">Informacion</a>                        -->
+        <form  name="historico" action="/historico" class="navbar-form navbar-left" method="post" role="tag">                 
             <div class="form-group">
                 <button id="historico" type="submit" class="btn btn-inverse">Informacion</button>    
             </div>            
         </form>        
         
         <form name="perfil" action="/perfil" class="navbar-form navbar-left" method="post" role="tag">                
-            <!--<a onClick="perfil.submit();" style="color:white;text-align:center;">Perfil</a>            -->
             <div class="form-group">
             </div>
             <button id="perfil" type="submit" class="btn btn-inverse">Perfil</button>    
 
         </form>             
+        <% if (inside == "1" ) { %>
+        <div class="navbar-center">
+           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
+           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
+           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
+           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
+        </div>
+         <div class="navbar-center-music">
+           <label id="informacionCancion" class="music-label"></label>    
+        </div>
+        <% } %>
         
         <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
             <div class="form-group">
@@ -152,7 +214,31 @@
                             }
                             </script>
                         </td>                          
-                      </tr>                       
+                      </tr>
+      <tr>
+                            <td>Playlist 1:</td>
+                            <td>
+                                <!-- Trigger the modal with a button -->
+                        <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>>
+                        <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+                            </td>
+                        </tr>
+      <tr>
+                            <td>Playlist 2:</td>
+                            <td>
+                                <!-- Trigger the modal with a button -->
+                        <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>>
+                        <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
+                            </td>
+                        </tr>
+      <tr>
+                            <td>Playlist 3:</td>
+                            <td>
+                                <!-- Trigger the modal with a button -->
+                        <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>>
+                        <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
+                            </td>
+                        </tr>
                     </tbody>
                   </table>
             </div>
@@ -165,5 +251,67 @@
 </form>
 </div>    
     
+
+<!-- Modal -->
+                      <div class="modal fade" id="myModal0" role="dialog">
+                        <div class="modal-dialog">
+
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h4 class="modal-title"><%= namePlaylist0 %></h4>
+                            </div>
+                            <div class="modal-body">
+                              <pre><%= cancionesPlaylist0 %></pre>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+      
+                    </div>
+                    </div>
+      <!-- Modal -->
+                      <div class="modal fade" id="myModal1" role="dialog">
+                        <div class="modal-dialog">
+
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h4 class="modal-title"><%= namePlaylist1 %></h4>
+                            </div>
+                            <div class="modal-body">
+                              <pre><%= cancionesPlaylist1 %></pre>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+      
+                    </div>
+                    </div>
+      <!-- Modal -->
+                      <div class="modal fade" id="myModal2" role="dialog">
+                        <div class="modal-dialog">
+
+                          <!-- Modal content-->
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h4 class="modal-title"><%= namePlaylist2 %></h4>
+                            </div>
+                            <div class="modal-body">
+                              <pre><%= cancionesPlaylist2 %></pre>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+      
+                    </div>
+                    </div>
+
 </body>
 </html>
