--- a/inicio.ejs
+++ b/inicio.ejs
@@ -31,17 +31,23 @@
   <div class="container-fluid">    
     <div class="navbar-header" >
         <a class="navbar-brand" style="color:white;">GALILEO</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">              
+        <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
+            data-target=".navbar-ex1-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+      </div>
+    <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">              
       <ul class="nav navbar-nav navbar-right">
 
         <form class="navbar-form navbar-left" action="/log" method="post" role="search">
             <label style="color:red"><%= errorMessage %></label>
             <div class="form-group">
-              <input type="text" class="form-control" id="email" name="email" placeholder="email@dominio.com">
+              <input type="text" class="form-control" id="email" style="width: 100%" name="email" placeholder="email@dominio.com">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control" id="pass" name="pass" placeholder="******************">
+              <input type="password" class="form-control" style="width: 100%" id="pass" name="pass" placeholder="******************">
             </div>
             <button name="commandButton" type="submit" class="btn btn-default" value="LogIn" style="background:white;color:black">Entrar</button>
             
@@ -119,11 +125,11 @@
 </div>
 
                       </div>  
-                    <div class="col-md-12">                        
-                          <button name="commandButton" type="submit" class="btn btn-default" value="Registro" style="background:#0B0B61;color:white;width:477px; margin: 0 auto;">Registrarse</button>
+                                        
+                          <button name="commandButton" type="submit" class="btn btn-default" value="Registro" style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Registrarse</button>
                           <label style="color:red"><%= errorMessageRegister %></label>
                           <label style="color:green"><%= successMessageRegister %></label>
-                    </div>
+                    
                   </form>                                                                                  
                 </div> 
                   
@@ -132,7 +138,6 @@
               </div>
         </div>                          
     </div>
-</div>
     
                       <!-- Modal -->
                       <div class="modal fade" id="myModal0" role="dialog">
