--- a/perfilAdministrador.ejs
+++ b/perfilAdministrador.ejs
@@ -50,57 +50,41 @@
     </style>
     
     <script type="text/javascript" src="/javascript/prototype.js"></script>    
-    
+        <% if (inside == "1" ) { %>
+
     <script>
+
         function musicNext(){
             new Ajax.Request('/musicSiguiente', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicBack(){
             new Ajax.Request('/musicAnterior', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicResume(){
             new Ajax.Request('/resumeMusic', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicPause(){
             new Ajax.Request('/musicPause', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
-        var informacion = function infoSong(){
-            new Ajax.Request('/infoSong', {
-              method: 'post',
-              onSuccess: success
-              });
-        }
-        
-        function success(response){
-                var sonando = "Sonando: ";
-                var container = $('informacionCancion');
-                var content = response.responseText;
-                
-                container.update(sonando+content);
-            }
-        <% if (inside == "1" ) { %>
-            setInterval(informacion,1000);
-        <% } %>
-        
-        
+       
     </script>
-    
+    <% } %>
     
     
     
@@ -113,9 +97,23 @@
 <nav class="navbar navbar-default" style="background:#0B0B61">
   <div class="container-fluid">    
     <div class="navbar-header" >
-        <a class="navbar-brand" style="color:white;">GALILEO</a>
+         <a class="navbar-brand" style="color:white;">GALILEO</a>
+        <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
+            data-target=".navbar-ex1-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+         <% if (inside == "1" ) { %>
+        <div class="navbar-center">
+           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
+           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
+           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
+           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
+        </div>
+        <% } %>
     </div>
-    <div class="collapse navbar-collapse" > 
+    <div class="collapse navbar-collapse navbar-ex1-collapse" > 
         <form  name="historico" action="/historico" class="navbar-form navbar-left" method="post" role="tag">                 
             <div class="form-group">
                 <button id="historico" type="submit" class="btn btn-inverse">Informacion</button>    
@@ -128,17 +126,6 @@
             <button id="perfil" type="submit" class="btn btn-inverse">Perfil</button>    
 
         </form>             
-        <% if (inside == "1" ) { %>
-        <div class="navbar-center">
-           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
-           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
-           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
-           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
-        </div>
-         <div class="navbar-center-music">
-           <label id="informacionCancion" class="music-label"></label>    
-        </div>
-        <% } %>
         
         <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
             <div class="form-group">
@@ -151,106 +138,106 @@
     
 <br>
 <br>   
-    
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >      
-  <form class="form-horizontal" role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
-  <div class="panel panel-info">
-    <div class="panel-heading" style="background:#0B0B61">
-              <h3 class="panel-title" style="text-align: center;color:white;">Usuario Galileo</h3>
-    </div>
-    <div class="panel-body">
-        <div class="row">                
-            <div class=" col-md-9 col-lg-12"> 
-                  <table class="table table-user-information">
-                    <tbody>
-                      <tr>
-                        <td>Nombre:</td>
-                        <td><input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>" required="true"></td>
-                      </tr>
-                      <tr>
-                        <td>Apellido:</td>
-                        <td>
-<input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>" required="true">    </td>
-                      </tr>
-                      <tr>
-                        <td>DNI:</td>
-                          <td><input type="hidden" name="userDNI"  value="<%= userDNI %>"></input>
-                              <label type="text" name="dni" ><%= userDNI %></label></td>
-                      </tr> 
-                      <tr>
-                        <td>Email:</td>
-                        <td><input type="email" class="form-control" name="email" value=<%= userEmail %> placeholder="email@dominio.com">
-                            <br>
-                            <label style="color:red"><%= errorMessageEmail %></label>
-                        </td>
-                      </tr> 
-                      <tr>
-                        <td>Contraseña:</td>
-                          <td><input type="hidden" name="pass"  value="<%= userPass %>"></input>
-                              <label type="text" name="password" ><%= userPass %></label></td>
-                      </tr>     
-                      <tr>
-                        <td>Temperatura seleccionada:</td>
-                        <td>
-                         <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
-                            <span id="rangeTemp"><%= userTemp %></span>
-                            <script type="text/javascript">
-                            function showValueTemp(newValue)
-                            {
-                                document.getElementById("rangeTemp").innerHTML=newValue;
-                            }
-                            </script>
-                        </td>
-                      </tr>                                           
-                      <tr>
-                        <td>Intensidad de luz:</td>
-                        <td>
-                         <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
-                            <span id="rangeLuz"><%= userLuz %></span>
-                            <script type="text/javascript">
-                            function showValueLuz(newValue)
-                            {
-                                document.getElementById("rangeLuz").innerHTML=newValue;
-                            }
-                            </script>
-                        </td>                          
-                      </tr>
-      <tr>
-                            <td>Playlist 1:</td>
+    <div class="container">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">      
+      <form class="form-horizontal" role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
+      <div class="panel panel-info">
+            <div class="panel-heading" style="background:#0B0B61">
+                <h3 class="panel-title" style="text-align: center;color:white;">Usuario Galileo</h3>
+            </div>
+        <div class="panel-body">
+            <div class="row">                
+                <div class=".col-xs-12 .col-md-8 col-lg-12"> 
+                      <table class="table table-user-information">
+                        <tbody>
+                          <tr>
+                            <td>Nombre:</td>
+                            <td><input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>" required="true"></td>
+                          </tr>
+                          <tr>
+                            <td>Apellido:</td>
                             <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+    <input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>" required="true">    </td>
+                          </tr>
+                          <tr>
+                            <td>DNI:</td>
+                              <td><input type="hidden" name="userDNI"  value="<%= userDNI %>"></input>
+                                  <label type="text" name="dni" ><%= userDNI %></label></td>
+                          </tr> 
+                          <tr>
+                            <td>Email:</td>
+                            <td><input type="email" class="form-control" name="email" value=<%= userEmail %> placeholder="email@dominio.com">
+                                <br>
+                                <label style="color:red"><%= errorMessageEmail %></label>
                             </td>
-                        </tr>
-      <tr>
-                            <td>Playlist 2:</td>
+                          </tr> 
+                          <tr>
+                            <td>Contraseña:</td>
+                              <td><input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
+                                  <label type="text" name="password" ><%= userPass %></label></td>
+                          </tr>     
+                          <tr>
+                            <td>Temperatura seleccionada:</td>
                             <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
+                             <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
+                                <span id="rangeTemp"><%= userTemp %></span>
+                                <script type="text/javascript">
+                                function showValueTemp(newValue)
+                                {
+                                    document.getElementById("rangeTemp").innerHTML=newValue;
+                                }
+                                </script>
                             </td>
-                        </tr>
-      <tr>
-                            <td>Playlist 3:</td>
+                          </tr>                                           
+                          <tr>
+                            <td>Intensidad de luz:</td>
                             <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                  </table>
+                             <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
+                                <span id="rangeLuz"><%= userLuz %></span>
+                                <script type="text/javascript">
+                                function showValueLuz(newValue)
+                                {
+                                    document.getElementById("rangeLuz").innerHTML=newValue;
+                                }
+                                </script>
+                            </td>                          
+                          </tr>
+          <tr>
+                                <td>Playlist 1:</td>
+                                <td>
+                                    <!-- Trigger the modal with a button -->
+                            <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>>
+                            <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+                                </td>
+                            </tr>
+          <tr>
+                                <td>Playlist 2:</td>
+                                <td>
+                                    <!-- Trigger the modal with a button -->
+                            <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>>
+                            <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
+                                </td>
+                            </tr>
+          <tr>
+                                <td>Playlist 3:</td>
+                                <td>
+                                    <!-- Trigger the modal with a button -->
+                            <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>>
+                            <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                      </table>
+                </div>
             </div>
         </div>
+        <div class="panel-footer">
+            <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1;">Modificar perfil</button>                        
+        </div>   
+      </div>
+    </form>
+    </div>    
     </div>
-    <div class="panel-footer">
-        <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:590px; margin: 0 auto;">Modificar perfil</button>                        
-    </div>   
-  </div>
-</form>
-</div>    
-    
 
 <!-- Modal -->
                       <div class="modal fade" id="myModal0" role="dialog">
