--- a/perfilUsuario.ejs
+++ b/perfilUsuario.ejs
@@ -52,79 +52,64 @@
             text-align: center;
             }
     </style>
-    
+    <% if (inside == "1" ) { %>
     <script>
         function musicNext(){
             new Ajax.Request('/musicSiguiente', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicBack(){
             new Ajax.Request('/musicAnterior', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicResume(){
             new Ajax.Request('/resumeMusic', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
         function musicPause(){
             new Ajax.Request('/musicPause', {
               method: 'post',
-            
+              parameters: {pass:$('pass').serialize(true)}
               });
         }
         
-       var informacion = function infoSong(){
-            new Ajax.Request('/infoSong', {
-              method: 'post',
-              onSuccess: success
-              });
-        }
-        
-        function success(response){
-                var sonando = "Sonando: ";
-                var container = $('informacionCancion');
-                var content = response.responseText;
-                
-                container.update(sonando+content);
-            }
-        <% if (inside == "1" ) { %>
-            setInterval(informacion,1000);
-        <% } %>
-
     </script>
-    
+    <% } %>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
 <title>Galileo</title>
 </head>
 <body>
     
-<nav class="navbar navbar-default" style="background:#0B0B61">
+<nav class="navbar navbar-default" role="navigation" style="background:#0B0B61">
   <div class="container-fluid">    
     <div class="navbar-header" >
-        <a class="navbar-brand" style="color:white;">GALILEO</a>
-    </div>
-   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-       <% if (inside == "1" ) { %>
+         <a class="navbar-brand" style="color:white;">GALILEO</a>
+        <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
+            data-target=".navbar-ex1-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+         <% if (inside == "1" ) { %>
         <div class="navbar-center">
            <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
            <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
            <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
-           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/>   
-       </div>
-       <div class="navbar-center-music">
-           <label id="informacionCancion" class="music-label"></label>    
-       </div>
+           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
+        </div>
         <% } %>
+    </div>
+    <div class="collapse navbar-collapse navbar-ex1-collapse" > 
        <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
             <div class="form-group">
             </div>
@@ -137,15 +122,16 @@
 <br>
 <br>   
     
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >      
-  <form class="form-horizontal" role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
+    <div class="container">
+     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">
+     <form class="form-horizontal" role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
   <div class="panel panel-info">
     <div class="panel-heading" style="background:#0B0B61">
               <h3 class="panel-title" style="text-align: center;color:white;">Usuario Galileo</h3>
     </div>
     <div class="panel-body">
         <div class="row">                
-            <div class=" col-md-9 col-lg-12"> 
+            <div class=".col-xs-12 .col-md-8 col-lg-12"> 
                   <table class="table table-user-information">
                     <tbody>
                       <tr>
@@ -164,14 +150,14 @@
                       </tr> 
                       <tr>
                         <td>Email:</td>
-                        <td><input type="email" class="form-control" name="email" value=<%= userEmail %> placeholder="email@dominio.com">
+                        <td><input id ="email" type="email" class="form-control" name="email" value=<%= userEmail %> placeholder="email@dominio.com">
                             <br>
                             <label style="color:red"><%= errorMessageEmail %></label>
                         </td>
                       </tr> 
                       <tr>
                         <td>Contraseña:</td>
-                          <td><input type="hidden" name="pass"  value="<%= userPass %>"></input>
+                          <td><input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
                               <label type="text" name="password" ><%= userPass %></label></td>
                       </tr>     
                       <tr>
@@ -230,12 +216,12 @@
         </div>
     </div>
     <div class="panel-footer">
-        <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:590px; margin: 0 auto;">Modificar perfil</button>                        
+        <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Modificar perfil</button>                        
     </div>   
   </div>
 </form>
 </div>
-    
+    </div>  
 <!-- Modal -->
 <div class="modal fade" id="myModal0" role="dialog">
     <div class="modal-dialog">
