--- a/inicio.ejs
+++ b/inicio.ejs
@@ -61,10 +61,7 @@
   </div>
 
 </nav>
-    
-<br>
-<br>    
-  
+
 <div class ="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 <div class="panel panel-default ">
   <div class="panel-heading" style="background:#0B0B61;">
@@ -98,7 +95,7 @@
         </div>
         <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <label for="temp">Temperatura (°C)</label>
+            <label for="temp">Temperatura (&#176C)</label>
             <input name ="temp" type="range" min="18" max="40" value="18" step="1" onchange="showValueTemp(this.value)" />
                 <span id="rangeTemp">18</span>
                 <script type="text/javascript">
