--- a/perfilUsuario.ejs
+++ b/perfilUsuario.ejs
@@ -1,244 +1,177 @@
 <html>
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>    
-    
-    <script type="text/javascript" src="/javascript/prototype.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="./javascript/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="./bootstrap/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="./javascript/prototype.js"></script>
+    
+    <link rel="stylesheet" href="./css/perfilUsuario.css">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
 
-    <style type="text/css">
-        body {        
-            font-family: "Arial";
-            font-size: 140%;
-            background-image: url("img/fondo.jpg");
-            
-        }   
-        
-        .navbar-center
-        {
-            position: absolute;
-            text-align: center;
-            margin: auto;
-            margin-top:10px;
-            margin-left: 10%;
-        }
- 
-         a:hover {
-          cursor:pointer;
-         }
-        
-        .navbar-center-music
-        {
-            position: absolute;
-            text-align: center;
-            margin: auto;
-            margin-top:10px;
-            margin-left: 22%;
-        }
-        
-        
-        .music-label{
-            font-family: "Arial";
-            font-size: 140%;
-            color:white;
-            text-align: center;
-            }
-    </style>
+
     <% if (inside == "1" ) { %>
-    <script>
-        function musicNext(){
-            new Ajax.Request('/musicSiguiente', {
-              method: 'post',
-              parameters: {pass:$('pass').serialize(true)}
-              });
-        }
-        
-        function musicBack(){
-            new Ajax.Request('/musicAnterior', {
-              method: 'post',
-              parameters: {pass:$('pass').serialize(true)}
-              });
-        }
-        
-        function musicResume(){
-            new Ajax.Request('/resumeMusic', {
-              method: 'post',
-              parameters: {pass:$('pass').serialize(true)}
-              });
-        }
-        
-        function musicPause(){
-            new Ajax.Request('/musicPause', {
-              method: 'post',
-              parameters: {pass:$('pass').serialize(true)}
-              });
-        }
-        
-    </script>
+      <script type="text/javascript" src="./javascript/spotifyManager.js"></script>
     <% } %>
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+    
+      
 
-<title>Galileo</title>
+<title>Galileo - <%= userName %></title>
 </head>
 <body>
 
 <div class="container">
-<nav class="navbar navbar-default" role="navigation" style="background:#0B0B61">
-  <div class="container-fluid">    
-    <div class="navbar-header" >
-        <a class="navbar-brand" style="color:white;">GALILEO</a>
-        <!-- <% if (inside == "1" ) { %> -->
-        <div class="navbar-center col-xs-12 col-sm-12 col-md-6">
-           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
-           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
-           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
-           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
-        </div>
-        <!-- <% } %> -->
-        <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
-            data-target=".navbar-ex1-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-    </div>
-    <div class="collapse navbar-collapse navbar-ex1-collapse" > 
-       <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
-            <div class="form-group">
+  <nav class="navbar navbar-default" role="navigation" style="background:#0B0B61">
+    <div class="container-fluid">    
+      <div class="navbar-header" >
+          <a class="navbar-brand" style="color:white;">GALILEO</a>
+          <% if (inside == "1" ) { %>
+            <div class="navbar-center-music col-xs-12 col-sm-12 col-md-6">
+               <input type='image' id="musicAnterior" onclick="spotifyManager.musicBack();" src="./img/back.png" width="33" height="33"/> 
+               <input type='image' id="musicSiguiente" onclick="spotifyManager.musicNext();" src="./img/foward.png" width="33" height="33"/> 
+               <input type='image' id="musicPause" src="./img/pause.png" onclick="spotifyManager.musicPause();" width="33" height="33"/> 
+               <input type='image' id="resumeMusic" onclick="spotifyManager.musicResume();" src="./img/play.png" width="33" height="33"/> 
             </div>
-            <button id="cerrarSesion" type="submit" class="btn btn-inverse">Cerrar sesión</button>    
-      </form>
+          <% } %>
+          <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
+              data-target=".navbar-ex1-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+      </div>
+      <div class="collapse navbar-collapse navbar-ex1-collapse" > 
+         <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
+              <div class="form-group">
+              </div>
+              <button id="cerrarSesion" type="submit" class="btn btn-inverse">Cerrar sesi&oacute;n</button>    
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
     
-<br>
-<br>   
-  <div class ="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
+  <div class ="col-xs-12 col-sm-12 col-md-8 col-md-offset-2">
     <div class="panel panel-default">
       <div class="panel-heading" style="background:#0B0B61">
               <h3 class="panel-title" style="text-align: center;color:white;">Usuario Galileo</h3>
       </div>
-    <div class="panel-body">
-      <form role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Nombre:</h4>
+      <div class="panel-body">
+        <form role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Nombre</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9" >
+                <input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>">
+            </div>
           </div>
-          <div class="col-xs-9 col-sm-9 col-md-9" >
-              <input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>">
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Apellido</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9" >
+                <input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>">
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Apellido:</h4>
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>DNI</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+              <input class="form-control" name="userDNI" value="<%= userDNI %>" disabled>
+              <input type="hidden" name="userDNI"  value="<%= userDNI %>"></input>
+            </div>
           </div>
-          <div class="col-xs-9 col-sm-9 col-md-9" >
-              <input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>DNI:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <h4><%= userDNI %></h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Email:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <input id ="email" type="email" class="form-control" name="email" value="<%= userEmail %>"placeholder="email@dominio.com">
-          </div>
-              <br>
-              <label style="color:red"><%= errorMessageEmail %></label>
-        </div>                
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Contraseña:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <h4 name="password"><%= userPass %></h4>
-          </div>
-          <input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
-        </div>    
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Temperatura:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
-              <span id="rangeTemp"><%= userTemp %></span>
-              <script type="text/javascript">
-              function showValueTemp(newValue)
-              {
-                  document.getElementById("rangeTemp").innerHTML=newValue;
-              }
-              </script>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-              <h4>Intensidad de luz:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-            <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
-                <span id="rangeLuz"><%= userLuz %></span>
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Email</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+                <input id ="email" type="email" class="form-control" name="email" value="<%= userEmail %>"placeholder="email@dominio.com">
+                <label style="color:red"><%= errorMessageEmail %></label>
+            </div>
+          </div>                
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Contrase&#241a</h5>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-9">
+              <input class="form-control" name="password" value="<%= userPass %>" disabled>
+              <input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
+            </div>
+            <input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
+          </div>    
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Temperatura seleccionada</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+                <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
+                <span id="rangeTemp"><%= userTemp %></span>
                 <script type="text/javascript">
-                  function showValueLuz(newValue)
-                  {
-                      document.getElementById("rangeLuz").innerHTML=newValue;
-                  }
+                function showValueTemp(newValue)
+                {
+                    document.getElementById("rangeTemp").innerHTML=newValue;
+                }
                 </script>
+            </div>
           </div>
-        </div>     
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-            <h4>Playlist 1:</h4>
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+                <h5>Intensidad de luz</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+              <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
+                  <span id="rangeLuz"><%= userLuz %></span>
+                  <script type="text/javascript">
+                    function showValueLuz(newValue)
+                    {
+                        document.getElementById("rangeLuz").innerHTML=newValue;
+                    }
+                  </script>
+            </div>
+          </div>     
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+              <h5>Playlist 1</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+                <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>
+                <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+            </div>
           </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>
-              <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+          <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+              <h5>Playlist 2</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+                <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>
+                <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
+            </div>
+          </div>       
+          <div class="row">
+             <div class="col-xs-4 col-sm-4 col-md-3 control-label">
+              <h5>Playlist 3</h5>
+            </div>
+            <div class="col-xs-8 col-sm-8 col-md-9">
+                <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>
+                <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-3 col-sm-3 col-md-3">
-            <h4>Playlist 2:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>
-              <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
-          </div>
-        </div>       
-        <div class="row">
-           <div class="col-xs-3 col-sm-3 col-md-3">
-            <h4>Playlist 3:</h4>
-          </div>
-          <div class="col-xs-9 col-sm-9 col-md-9">
-              <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>
-              <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12" >
-              <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Modificar perfil</button>
-          </div>
-        </div>             
-    </form>
-  </div> <!-- div del panel body -->
-</div> <!-- div del col -->
-</div> <!-- div del panel -->
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12" >
+                <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Modificar perfil</button>
+            </div>
+          </div>             
+        </form>
+      </div><!-- div del panel body -->
+    </div> <!-- div del panel-default -->
+  </div> <!-- div del col -->
+</div> <!-- div del container -->
 
 
 <!-- Modal -->
