Optimización de inicio.ejs para celulares Agregar en inicio.ejs los js y css haciendo referencia a los que estan dentro del proyecto.

--- a/inicio.ejs
+++ b/inicio.ejs
@@ -2,18 +2,20 @@
 <head>
     
     <title>Galileo</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-                
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="./javascript/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="./bootstrap/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="./javascript/prototype.js"></script>
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="stylesheet" href="./css/perfilAdministrador.css">   
+
     <style type="text/css">
         body {        
             font-family: "Arial";
@@ -21,7 +23,7 @@
             background-image: url("img/fondo.jpg");
         }    
     </style>
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
 </head>
 <body>
 <div class="container">  
